# pes2021-transfer-tool

./: LICENSE  README.md  apply_transfers.py  export_squads.py  export_team_player_data.py  fetch_latest_transfermarkt_transfers.py  fetch_latest_transfers.py  fetch_team_transfermarkt_transfers.py  fetch_team_transfers.py  fetch_transfermarkt_transfers.py  pyproject.toml  setup.py
data/: FL24v2_players.csv  FL24v2_teams.csv  FL25v1.1_players.csv  FL25v1.2_players.csv  FL25v1.3_players.csv  FL25v1.4_players.csv  FL25v1.5_players.csv  FL25v1_players.csv  diff_FL24v2-FL25v1_players.diff  diff_FL25v1-FL25v1.1_players.diff  diff_FL25v1.1-FL25v1.2_players.diff  diff_FL25v1.2-FL25v1.3_players.diff  diff_FL25v1.3-FL25v1.4_players.diff  diff_FL25v1.4-FL25v1.5_players.diff
input/: FL24v2_teams.csv
src/: crypt_utils.py  csv_utils.py  tactics_utils.py  team_utils.py  transfer_utils.py
tests/: test_tactics_utils.py  test_team_utils.py  test_transfer_utils.py
